--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^1.1.0
+  connectivity_plus: ^4.0.1
+  shared_preferences: ^2.2.0
+  introduction_screen: ^3.1.9
+  provider: ^6.0.5
+  easy_search_bar: ^2.5.0
   flutter:
     sdk: flutter
 
